--- a/templates/heartrate.html
+++ b/templates/heartrate.html
@@ -99,6 +99,6 @@
     <p>&copy; 2024 Healios.ai | All Rights Reserved</p>
   </footer>
 
-  <script type="module" src="/Healios.ai/static/index.js"></script>
+  <script type='module' src="{{url_for('static', filename='index.js')}}"></script>
 </body>
 </html>
