--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
       body {
         font-family: "Roboto", sans-serif;
         /* background-image: url("static/images/indexpagepic.png"); */
-        background-image: url("/Healios.ai/static/images/indexpagepic.png");
+        background-image: url("/static/images/indexpagepic.png");
 
         background-size: cover;
         background-position: center;
