--- a/templates/video.html
+++ b/templates/video.html
@@ -230,7 +230,7 @@ video {
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <!-- <script src="{{url_for('static', filename='main.js')}}"></script>
 <script src="{{url_for('static', filename='ga.js')}}"></script> -->
-<script src="/Healios.ai/static/main.js"></script>
-     <script src="/Healios.ai/static/ga.js"></script>
+<script src="/static/main.js"></script>
+     <script src="/static/ga.js"></script>
 </body>
 </html>
