--- a/templates/write.html
+++ b/templates/write.html
@@ -51,7 +51,7 @@
         }
 
         .logo {
-            background-image: url(/Healios.ai/static/images/healiosLogo.png);
+            background-image: url(/static/images/healiosLogo.png);
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
@@ -267,7 +267,7 @@
         .avatar {
 
             border-radius: 50%;
-            background-image: url(/Healios.ai/static/images/shared\ image.png);
+            background-image: url(/static/images/shared_image.png);
             background-size: cover;
             background-position: center;
             display: flex;
