--- a/templates/bonding.html
+++ b/templates/bonding.html
@@ -283,7 +283,7 @@
         <nav class="nav">
             <ul>
                 <li><a href="{{url_for('write')}}">Want to write more about yourself</a></li>
-                <li><a href="{{url_for('dashboard')}}">Dashboard</a></li>
+                <li><a href="{{url_for('user_dashboard')}}">Dashboard</a></li>
             </ul>
         </nav>
 
