--- a/templates/doc_details.html
+++ b/templates/doc_details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<
+
 <html>
     <head>
         <meta charset="utf-8">
@@ -12,9 +12,9 @@
     <body>
        <h1>Appointment Sheduling with doctor</h1>
        <h2>Details</h2>
-       <h2><li><strong>{{doc_to_book.name}} -  {{ doc_to_book.qualifications }}</strong></li></h2>
-            <h2>Specialties:{{doc_to_book.specialties}}</h2>
-            <a href="mailto:{{doc_to_book.email}}">Send Email</a>
+       <h2><li><strong>{{doc_to_book.user.name}} -  {{ doc_to_book.qualification }}</strong></li></h2>
+            <h2>Specialties:{{doc_to_book.specialization}}</h2>
+            <a href="mailto:{{doc_to_book.user.email}}">Send Email</a>
             <p>ML Model for appintment scheduling here itself</p>
             
         
