--- a/templates/doctor_appointments.html
+++ b/templates/doctor_appointments.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctor Dashboard</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='doctor_appointments.css') }}">
 </head>
 <body>
     <h1>Manage Appointments</h1>
