--- a/templates/prescription_list.html
+++ b/templates/prescription_list.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prescription List</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='prescription_list.css') }}">
+    <p>Welcome {{user_in}}
     <style>
         table {
             width: 100%;
