--- a/templates/view.html
+++ b/templates/view.html
@@ -13,6 +13,6 @@
     <p><strong>Medication:</strong> {{ patient_prescription.medication }}</p>
     <p><strong>Dosage:</strong> {{ patient_prescription.dosage }}</p>
     <p><strong>Instructions:</strong> {{ patient_prescription.instructions }}</p>
-    <a href="{{ url_for('doc_profile') }}">Back to Home</a>
+    <a href="{{ url_for('doctor_dashboard') }}">Back to Home</a>
 </body>
 </html>
