--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -25,6 +25,8 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#feedback">Feedback</a></li>
+                <li><a href="{{ url_for('steps') }}">Steps</a></li>
+                
                 
             </ul>
             <li class="profile">
