--- a/templates/doctor_dashboard.html
+++ b/templates/doctor_dashboard.html
@@ -22,6 +22,7 @@
         <a href="{{ url_for('view') }}" class="button">Prescription List</a>
         <a href="{{ url_for('prescription') }}" class="button">Prescription </a>
         <a href="{{ url_for('doctor_appointment') }}" class="button">Appointments </a>
+        <a href="{{ url_for('doctor_calender') }}" class="button">Doctor Calender </a>
         <a href="{{ url_for('logout') }}" class="button">Logout </a>
     </body>
 </html>
