feat/Added appointment history

--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -232,6 +232,7 @@
                 <p><a href="{{ url_for('feedback') }}" class="footer-link">Share Feedback</a></p>
                 <p><a href="{{ url_for('appointment') }}" class="footer-link">Book Appointment</a></p>
                 <p><a href="{{ url_for('schedule') }}" class="footer-link">View Schedule</a></p>
+                <p><a href="{{ url_for('appointment_history') }}" class="footer-link">Appointment History</a></p>
             </div>
             <div class="footer-right">
                 <h3>Follow Us</h3>
