--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -139,7 +139,7 @@
                     <h3 class="feature-title">Our AI Chatbot (Healios)</h3>
                     <p class="feature-description">Get instant healthcare advice from our AI-powered chatbot Healios.</p>
                     <!--<a href="#" class="feature-btn">Chat Now</a>-->
-                    <a href="{{url_for('view')}}" class="feature-btn">Chat Now</a>
+                    <a href="https://medical-system-162117068841.asia-south1.run.app/" class="feature-btn">Chat Now</a>
                 </div>
             </div>
     
